--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ nav {
   justify-content: space-between;
   min-height: 90px;
 }
-.navbar-menu-container {
+.menu-container {
   display: none;
 }
 .navbar-links-container a {
